# react-native-everything-player

./: .gitignore  .prettierignore  .prettierrc  .yarnignore  CLAUDE_BLACK_VIDEO_CONTEXT.md  NitroPlayer.podspec  README.md  REQUIREMENTS.md  build.gradle  eslint.config.mjs  gradle.properties  nitro.json  package-lock.json  package.json  progress-update.md  react-native-everything-player.podspec  settings.gradle  tsconfig.build.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties  local.properties  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/everythingplayer/: EverythingPlayerInitProvider.kt  EverythingPlayerPackage.kt  HeadlessJsMediaService.java  HybridEverythingPlayer.kt  MusicEvents.kt  MusicService.kt
android/src/main/java/com/everythingplayer/extensions/: AudioPlayerStateExt.kt  EnumExtensions.kt  NumberExt.kt
android/src/main/java/com/everythingplayer/kotlinaudio/event/: EventHolder.kt  PlayerEventHolder.kt
android/src/main/java/com/everythingplayer/kotlinaudio/models/: AudioContentType.kt  AudioItem.kt  AudioItemTransitionReason.kt  AudioPlayerState.kt  BufferConfig.kt  CacheConfig.kt  Capability.kt  WakeMode.kt  (+9 more)
android/src/main/java/com/everythingplayer/model/: MetadataAdapter.kt  PlaybackMetadata.kt  State.kt  Track.kt  TrackAudioItem.kt  TrackMetadata.kt
android/src/main/java/com/everythingplayer/utils/: AppForegroundTracker.kt  BundleUtils.kt  CoilBitmapLoader.kt  RejectionException.kt  SabrDataSource.kt  SabrDownloader.kt  SabrPlaybackSession.kt
(+284 files in other folders)
